# DECAF

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
src/: ComposeFunction.py  ConfigReader.py  DECAF.py  DatafileIO.py  FuzzyMatch.py  StringFormat.py  _scratchpad.ipynb
src/ConfigReader/: ConfigReader.py  ConfigReader_test.py
src/ConfigReader/config_sample/: hello_world.ini  hello_world.txt  pythagorean_theorem.txt
src/DECAF/: ComposeFunction.py  ConfigReader.py  DECAF.py  DatafileIO.py  FuzzyMatch.py  StringFormat.py  _scratchpad.ipynb
src/DECAF/config/processing/: fuzzy_match_company.ini
src/DECAF/tests/config/loading/: load_fuzzy_match_companies.ini  load_pythagorean_triples_all.ini  load_pythagorean_triples_cols_ab.ini  load_pythagorean_triples_cols_c.ini
src/DECAF/tests/config/processing/: fuzzy_match_company.ini  fuzzy_match_company_test.ini
src/DECAF/tests/integration/: ConfigReader_int_test.py  DECAF_int_test.py  DatafileIO_int_test.py  FuzzyMatch_int_test.py
src/DECAF/tests/unit/: ConfigReader_test.py  DatafileIO_test.py
src/StringFormat/: StringFormat.py  StringFormat_test.py
src/config/cleaning/: clean_company_name.ini
src/config/processing/: fuzzy_match_company.ini
src/tests/: TestFuncs.py
src/tests/config/: hello_world.ini  load_fuzzy_match_companies.ini  load_pythagorean_triples_all.ini  load_pythagorean_triples_cols_ab.ini  load_pythagorean_triples_cols_c.ini  pythagorean_theorem.ini
src/tests/config/loading/: load_pythagorean_triples_cols_c.ini
src/tests/config/processing/: fuzzy_match_company.ini  fuzzy_match_company_test.ini  relative_cleaning_ref.ini
src/tests/data/: DatafileIO_write_test.xlsx  fuzzy_match_companies.csv  fuzzy_match_companies.xlsx  fuzzy_match_companies.xlsx_FUZZY_OUT.csv  fuzzy_match_companies.xlsx_OUT.csv  fuzzy_match_companies_missing_data.xlsx  fuzzy_match_companies_missing_data.xlsx_OUT.csv  hello_world.txt  pythagorean_triples.csv
src/tests/integration/: ComposeFunction_int_test.py  ComposeFunction_test.py  ConfigReader_int_test.py  DECAF_int_test.py  DatafileIO_int_test.py  FuzzyMatch_int_test.py
src/tests/unit/: ComposeFunction_test.py  ConfigReader_test.py  DatafileIO_test.py  FuzzyMatch_test.py  StringFormat_test.py
test_dist/: _scratchpad.ipynb
